# drawbridge

./: README.md  package.json  svelte.config.js
.github/workflows/: publish.yaml
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/proto/: cecpub.proto  proto.proto
src-tauri/protos/: pub_api.proto
src-tauri/src/: driver.rs  logger.rs  main.rs  middleware.rs  settings.rs  storage.rs  win_bat.rs  win_cmd.rs  win_exe.rs
src-tauri/src/driver/: connect.rs  ptcec.rs  ssh.rs
src-tauri/src/win_exe/: asset.rs
src/lib/: AddRemote.svelte  CheckBox.svelte  CreateForm.svelte  DriverSwitch.svelte  FileDrop.svelte  Middleware.svelte  RemoteDetails.svelte  Settings.svelte  SettingsToggle.svelte  TitleBar.svelte
src/lib/RemoteList/: RemoteList.svelte  RemoteListRow.svelte
src/models/: remote.ts  settings.ts
src/routes/: +page.svelte
src/services/: open.ts  storage.ts
