[package]
name = "drawbridge"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
tonic-build = "0.8.4"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-save", "shell-open", "window-all"] }
tonic = "0.8.3"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
prost = "0.11.5"
tokio-stream = "0.1.11"
futures = "0.3.25"
russh = "0.35.0-beta.9"
russh-keys = "0.23.0-beta.1"
anyhow = "1.0.68"
async-trait = "0.1.60"
async-ssh = "0.1.2"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
rev = "9bd993aa67766596638bbfd91e79a1bf8f632014"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
