[package]
name = "drawbridge"
version = "0.0.3"
description = "A Tauri App"
authors = ["Khadim Fall"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
tonic-build = "0.8.4"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-open", "dialog-save", "shell-open", "updater", "window-all"] }
tonic = "0.8.3"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
prost = "0.11.5"
tokio-stream = "0.1.11"
futures = "0.3.25"
async-trait = "0.1.60"
directories = "4.0.1"
base64 = "0.21.0"
regex = "1.7.1"
rust-embed = "6.4.2"
humantime = "2.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
